--- a/blockly/apps/mixly/index.html
+++ b/blockly/apps/mixly/index.html
@@ -924,6 +924,15 @@
 </block>
 </category>
 <category id="catSensor" colour="40">
+  <block type="test_inout_digital_write2">
+    <value name="PIN">
+      <shadow type="pins_digital"></shadow>
+    </value>
+    <value name="STAT">
+      <shadow type="inout_highlow">
+      </shadow>
+    </value>
+  </block>
   <block type="chaoshengbo2">
   </block>
   <block type="DHT">
