--- a/blockly/apps/mixly/index_custom.html
+++ b/blockly/apps/mixly/index_custom.html
@@ -318,6 +318,10 @@
 <block type="serial_write">
 </block>
 </category>
+<category id="catLists"  colour="260">
+  <block type="lists_create_with2">
+  </block>
+</category>
 <category id="catActuator" colour="100">
   <category id="catActuator_motor" colour="100">
     <block type="servo_move">
