--- a/blockly/apps/mixly/index_custom.html
+++ b/blockly/apps/mixly/index_custom.html
@@ -321,6 +321,20 @@
 <category id="catLists"  colour="260">
   <block type="lists_create_with2">
   </block>
+  <block type="lists_create_with3">
+  </block>
+  <block type="controls_if_receive_mess">
+  </block>
+  <block type="lists_mess1">
+  </block>
+  <block type="lists_mess2">
+  </block>
+  <block type="lists_mess3">
+  </block>
+  <block type="lists_mess4">
+  </block>
+  <block type="lists_mess5">
+  </block>
 </category>
 <category id="catActuator" colour="100">
   <category id="catActuator_motor" colour="100">
