--- a/blockly/apps/mixly/index_custom.html
+++ b/blockly/apps/mixly/index_custom.html
@@ -353,6 +353,13 @@
         </shadow>
       </value>
     </block>
+    <block type="AFMotorRun">
+      <value name="speed">
+        <shadow type="math_number">
+          <field name="NUM">100</field>
+        </shadow>
+      </value>
+    </block>
 </category>
 </category>
 </xml>
