--- a/blockly/apps/mixly/index_custom.html
+++ b/blockly/apps/mixly/index_custom.html
@@ -184,6 +184,16 @@
       <shadow type="pins_digital"></shadow>
     </value>
   </block>
+  <block type="inout_analog_write">
+    <value name="PIN">
+      <shadow type="pins_pwm"></shadow>
+    </value>
+    <value name="NUM">
+      <shadow type="math_number">
+        <field name="NUM">0</field>
+      </shadow>
+    </value>
+  </block>
 </category>
 <category id="catControl"  colour="120">
   <block type="base_setup">
