add function for blockly on client side

--- a/blockly/apps/mixly/index_custom.html
+++ b/blockly/apps/mixly/index_custom.html
@@ -317,6 +317,8 @@
 </category>
 <category id="catVar" colour="330" custom="VARIABLE">
 </category>
+<category id="catFun" custom="PROCEDURE" colour="290">
+</category>
 <category id="catSerialPort"  colour="65">
  <block type="serial_begin">
   <value name="CONTENT">
