add else control function for blockly

--- a/blockly/apps/mixly/index_custom.html
+++ b/blockly/apps/mixly/index_custom.html
@@ -223,6 +223,8 @@
 </block>
 <block type="controls_if">
 </block>
+<block type="controls_else">
+</block>
 <block type="controls_switch_case">
 </block>
 <block type="controls_for">
